Add text decoration and media query

--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 
 
     <!-- <img class=header_bg src="./HW2.2HW2.2_img/bg.jpg" alt="Green tree buds macro photo"> -->
-    <div class="background_main">
+    <!-- <div class="background_main">
         <div class="container">
             <header>
                 <nav>
@@ -35,7 +35,7 @@
                     <h1>Sebastian Mullaert</h1>
                     <h2 id="biography">(Biography)</h2>
                 </div>
-                <img src="./HW2.2_img/main_portrait.jpg" alt="Sebastian Mullaert photo portrait with closed eys">
+                <img src="./img/main_portrait.jpg" alt="Sebastian Mullaert photo portrait with closed eys">
             </section>
         </div>
         <div id="intro_decoration">Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mul</div>
@@ -59,13 +59,13 @@
                     <p>Scroll</p>
                     <p>|</p>
                 </div>
-            </section>
+            </section> -->
             <section class="philosophy">
                 <div>
-                    <h2>(Philosophy)</h2>
-                    <p> Convergence
-                        of Zen meditation,
-                        nature & creativity</p>
+                    <h2 id="header">(Philosophy)</h2>
+                    <p class="main_thought"> Convergence
+                        of <span class="font_green">Zen meditation</span>,
+                        <span class="font_bold">nature</span> & creativity</p>
                     <div class="text_block">
                         <p>The majesty of the natural world has always been integral to Sebastian Mullaert’s music.</p>
                         <p>His approach to art, as well as to life, is centered around meditating on nature’s primordial
@@ -78,11 +78,11 @@
                 </div>
                 <figure>
                     <figure>
-                        <img src="./HW2.2_img/wood_large.jpg"
+                        <img src="./img/wood_large.jpg"
                             alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
                     </figure>
                     <figure>
-                        <img src="./HW2.2_img/wood_small.jpg"
+                        <img src="./img/wood_small.jpg"
                             alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
                     </figure>
                     <figcaption>Based on nature breath</figcaption>
