Add img ikon and more decoration.

--- a/index.html
+++ b/index.html
@@ -61,19 +61,20 @@
                 </div>
             </section> -->
             <section class="philosophy">
-                <div>
-                    <h2 id="header">(Philosophy)</h2>
-                    <p class="main_thought"> Convergence
-                        of <span class="font_green">Zen meditation</span>,
-                        <span class="font_bold">nature</span> & creativity</p>
+                <div class="philosophy_text_part">
+                    <div class="float"><h2 id="header">(Philosophy)</h2>
+                        <p class="main_thought"> Convergence
+                            of <span class="font_green">Zen meditation</span>,
+                            <span class="font_important">nature</span> & creativity</p>
+                    </div>
+                    
                     <div class="text_block">
                         <p>The majesty of the natural world has always been integral to Sebastian Mullaert’s music.</p>
                         <p>His approach to art, as well as to life, is centered around meditating on nature’s primordial
                             cycles and forces.</p>
                     </div>
-                    <div class="details">
-                        <p class="line">—</p>
-                        <a href="#">Read more</a>
+                    <div class="button">
+                        <a href="#"><img class="button_line" src="./img/orange_line.svg" alt="decorated line">Read more</a>
                     </div>
                 </div>
                 <figure>
