Save before figure decoration

--- a/index.html
+++ b/index.html
@@ -77,7 +77,7 @@
                         <a href="#"><img class="button_line" src="./img/orange_line.svg" alt="decorated line">Read more</a>
                     </div>
                 </div>
-                <figure>
+                <figure class="groupe">
                     <figure>
                         <img src="./img/wood_large.jpg"
                             alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
