--- a/index.html
+++ b/index.html
@@ -39,9 +39,9 @@
             </section>
         </div>
         <div id="intro_decoration">Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mullaert Sebastian Mul</div>
-    </div>
+    </div> -->
     <div class="container">
-        <main>
+        <!-- <main>
             <section class="about">
                 <h2 id="about">(About)</h2>
                 <p> Musical artist, live performer, record producer & DJ</p>
@@ -60,35 +60,42 @@
                     <p>|</p>
                 </div>
             </section> -->
-            <section class="philosophy">
+             <section class="philosophy">
                 <div class="philosophy_text_part">
-                    <div class="float"><h2 id="header">(Philosophy)</h2>
+                    <div class="float">
+                        <h2 id="header">(Philosophy)</h2>
                         <p class="main_thought"> Convergence
-                            of <span class="font_green">Zen meditation</span>,
-                            <span class="font_important">nature</span> & creativity</p>
+                        of <span class="font_green">Zen meditation</span>,
+                        <span class="font_important">nature</span> & creativity
+                        </p>
                     </div>
-                    
+
                     <div class="text_block">
                         <p>The majesty of the natural world has always been integral to Sebastian Mullaert’s music.</p>
                         <p>His approach to art, as well as to life, is centered around meditating on nature’s primordial
-                            cycles and forces.</p>
+                        cycles and forces.</p>
                     </div>
                     <div class="button">
                         <a href="#"><img class="button_line" src="./img/orange_line.svg" alt="decorated line">Read more</a>
                     </div>
                 </div>
-                <figure class="groupe">
-                    <figure>
-                        <img src="./img/wood_large.jpg"
-                            alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+                <figure class="groupe_img">
+                    <figure class="big_img">
+                        <img class="desktop" src="./img/wood_large.jpg"
+                        alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+                        <img class="mobile" src="./img/wood_large_mobile1x.jpg"
+                        alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+
+                        <figcaption class="desktop">Based on nature breath</figcaption>
                     </figure>
-                    <figure>
-                        <img src="./img/wood_small.jpg"
-                            alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+                    <figure class="small_img">
+                        <img class="desktop" src="./img/wood_small.jpg"
+                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+                         <img class="mobile" src="./img/wood_small_mobile1x.jpg"
+                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
                     </figure>
-                    <figcaption>Based on nature breath</figcaption>
                 </figure>
             </section>
         </main>
     </div>
-</body>            
+</body>
