--- a/index.html
+++ b/index.html
@@ -5,6 +5,8 @@
     <title>Sebastian Mullaert</title>
     <meta charset="utf-8">
     <meta name="description" content="Sebastian Mullaert personal site">
+    <meta name="viewport" content="width=device-width,
+initial-scale=1">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Quattrocento">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css2?family=Montserrat">
     <link rel="stylesheet" type="text/css" href="style.css" />
