--- a/index.html
+++ b/index.html
@@ -81,11 +81,14 @@ initial-scale=1">
                         <a href="#"><img class="button_line" src="./img/orange_line.svg" alt="decorated line">Read more</a>
                     </div>
                 </div>
-                <figure class="groupe_img">
+                <!-- <figure class="groupe_img">
                     <figure class="big_img">
-                        <img class="desktop" src="./img/wood_large.jpg"
+                        <img class="desktop" 
+                       src="./img/wood_large.jpg"
                         alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
-                        <img class="mobile" src="./img/wood_large_mobile1x.jpg"
+
+                        <img class="mobile" 
+                        src="./img/wood_large_mobile1x.jpg"
                         alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
 
                         <figcaption class="desktop">Based on nature breath</figcaption>
@@ -94,6 +97,33 @@ initial-scale=1">
                         <img class="desktop" src="./img/wood_small.jpg"
                         alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
                          <img class="mobile" src="./img/wood_small_mobile1x.jpg"
+                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+                    </figure>
+                </figure>  -->
+                <figure class="groupe_img">
+                    <figure class="big_img">
+                        <img class="desktop" 
+                        srcset="./img/wood_large2x.jpg 2x"
+                        src="./img/wood_large.jpg"
+                        alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+
+                        <img class="mobile" 
+                        srcset="./img/wood_large_mobile2x.jpg 2x"
+                        src="./img/wood_large_mobile1x.jpg"
+                        alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+
+                        <figcaption class="desktop">Based on nature breath</figcaption>
+                    </figure>
+
+                    <figure class="small_img">
+                        <img class="desktop"
+                        srcset="./img/wood_small2x.jpg 2x"
+                        src="./img/wood_small.jpg"
+                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+
+                        <img class="mobile" 
+                        srcset="./img/wood_small_mobile2x.jpg 2x" 
+                        src="./img/wood_small_mobile1x.jpg"
                         alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
                     </figure>
                 </figure>
