Add tag <picture> instead <img>

--- a/index.html
+++ b/index.html
@@ -100,7 +100,11 @@ initial-scale=1">
                         alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
                     </figure>
                 </figure>  -->
-                <figure class="groupe_img">
+
+
+                <!-- Send for fidback wertion -->
+
+                <!-- <figure class="groupe_img">
                     <figure class="big_img">
                         <img class="desktop" 
                         srcset="./img/wood_large2x.jpg 2x"
@@ -113,18 +117,32 @@ initial-scale=1">
                         alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
 
                         <figcaption class="desktop">Based on nature breath</figcaption>
-                    </figure>
+                    </figure> -->
 
-                    <figure class="small_img">
-                        <img class="desktop"
-                        srcset="./img/wood_small2x.jpg 2x"
-                        src="./img/wood_small.jpg"
-                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+                    <!-- Send for fidback wertion -->
+                    
 
-                        <img class="mobile" 
-                        srcset="./img/wood_small_mobile2x.jpg 2x" 
-                        src="./img/wood_small_mobile1x.jpg"
-                        alt="Sebastian Mullaert lies on his back with his arms outstretched in a deciduous forest">
+                    <figure class="groupe_img">
+                        <figure class="big_img">
+                             <picture class="big_img__picture">
+                                <source media="(max-width: 1149px)" srcset="./img/wood_large_mobile1x.jpg, ./img/wood_large_mobile2x.jpg 2x">
+                                <source media="(min-width: 1150px)" srcset="./img/wood_large.jpg, ./img/wood_large2x.jpg 2x">
+                                <img 
+                                    src="./img/wood_large.jpg"
+                                    alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+                             </picture>
+    
+                            <figcaption class="desktop">Based on nature breath</figcaption>
+                        </figure>
+
+                        <figure class="small_img">
+                            <picture class="small_img__picture">
+                                <source media="(max-width: 1149px)" srcset="./img/wood_small_mobile1x.jpg, ./img/wood_small_mobile2x.jpg 2x">
+                                <source media="(min-width: 1150px)" srcset="./img/wood_small.jpg, ./img/wood_small2x.jpg 2x">
+                                <img 
+                                    src="./img/wood_small.jpg"
+                                    alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
+                             </picture>
                     </figure>
                 </figure>
             </section>
