Add webp alternative for img

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@ initial-scale=1">
     <div class="container">
 
         <section class="philosophy">
-            
+
             <div class="philosophy_text_part">
                 <div class="float">
                     <h2 id="header">(Philosophy)</h2>
@@ -39,9 +39,10 @@ initial-scale=1">
             <figure class="groupe_img">
                 <figure class="big_img">
                     <picture class="big_img__picture">
-                        <source media="(max-width: 1149px)"
-                            srcset="./img/wood_large_mobile1x.jpg, ./img/wood_large_mobile2x.jpg 2x">
-                        <source media="(min-width: 1150px)" srcset="./img/wood_large.jpg, ./img/wood_large2x.jpg 2x">
+                        <source type="image/webp" media="(max-width: 1149px)" srcset="./img/wood_large_mobile1x.webp, ./img/wood_large_mobile2x.webp 2x">
+                        <source type="image/webp" media="(min-width: 1150px)" srcset="./img/wood_large.webp, ./img/wood_large2x.webp 2x">
+                        <source type="image/jpeg" media="(max-width: 1149px)" srcset="./img/wood_large_mobile1x.jpg, ./img/wood_large_mobile2x.jpg 2x">
+                        <source type="image/jpeg" media="(min-width: 1150px)" srcset="./img/wood_large.jpg, ./img/wood_large2x.jpg 2x">
                         <img src="./img/wood_large.jpg"
                             alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
                     </picture>
@@ -51,9 +52,10 @@ initial-scale=1">
 
                 <figure class="small_img">
                     <picture class="small_img__picture">
-                        <source media="(max-width: 1149px)"
-                            srcset="./img/wood_small_mobile1x.jpg, ./img/wood_small_mobile2x.jpg 2x">
-                        <source media="(min-width: 1150px)" srcset="./img/wood_small.jpg, ./img/wood_small2x.jpg 2x">
+                        <source type="image/webp" media="(max-width: 1149px)" srcset="./img/wood_small_mobile1x.webp, ./img/wood_small_mobile2x.webp 2x">
+                        <source type="image/webp" media="(min-width: 1150px)" srcset="./img/wood_small.webp, ./img/wood_small2x.webp 2x">
+                        <source type="image/jpeg" media="(max-width: 1149px)" srcset="./img/wood_small_mobile1x.jpg, ./img/wood_small_mobile2x.jpg 2x">
+                        <source type="image/jpeg" media="(min-width: 1150px)" srcset="./img/wood_small.jpg, ./img/wood_small2x.jpg 2x">
                         <img src="./img/wood_small.jpg"
                             alt="Sebastian Mullaert stands with his back to the viewer in a deciduous forest">
                     </picture>
